[package]
name = "pimp-my-peer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.11"
dashmap = "6.0.1"
hex = "0.4.3"
hex-literal = "0.4.1"
libp2p-identity = { version = "0.2.9", features = [
    "secp256k1",
    "peerid",
    "rand",
] }
libsecp256k1 = "0.7.1"
rand = "0.8.5"
rayon = "1.10.0"
